# 427-Lab2

./: Cargo.toml  README.md  index.html  lab2_report.md
.github/workflows/: pages.yml
src/: gpu.rs  lib.rs  main.rs  mesh.rs
