[package]
name     = "lab2"
version  = "0.1.0"
edition  = "2021"
autobins = false  # suppress bin target so Trunk only sees the cdylib, avoids wasm filename collision

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu     = "29.0.1"
winit    = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
web-time = "1"
glam     = { version = "0.27", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log      = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster   = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log              = "1.0"
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "Element", "Performance"
] }
